--- a/api/.env
+++ b/api/.env
@@ -1,3 +1,3 @@
-MONGO_URL = mongodb+srv://aryan:12345@cluster0.guvtvgw.mongodb.net/?retryWrites=true&w=majority
+MONGO_URL = mongodb+srv://harsh1:12345@cluster0.hovxrnc.mongodb.net/?retryWrites=true&w=majority
 PASS_SEC= lama
 JWT_SEC = lama
